v1 newServAdded